Cree template de eliminar y editar - Cargue imagenes y modifique descripciones de las mismas

--- a/app1/templates/app1/base.html
+++ b/app1/templates/app1/base.html
@@ -45,7 +45,7 @@
                         </div>
                     </div>             
                 <!-- Masthead Heading-->
-                <h1 class="masthead-heading text-uppercase mb-0">CONTANOS TU COMIDA FAVORITA</h1>
+                <h1 class="masthead-heading text-uppercase mb-0">CONTANOS TU PLATILLO FAVORITO</h1>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
@@ -79,7 +79,7 @@
                 <div class="col-lg-50">
                     <p>
                     </p>
-                    <h6 class="text-uppercase mb-2">About</h6>
+                    <h6 class="text-uppercase mb-2">Acerca de Nosotros</h6>
                     
                     <p class="lead mb-0">
                         Contino Emiliano
