--- a/app1/templates/app1/index.html
+++ b/app1/templates/app1/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         {% load static %}
+      
         <meta charset="utf-6" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
@@ -21,12 +22,12 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="http://127.0.0.1:8000/">Inicio</a>
+                <a class="navbar-brand" href="http://127.0.0.1:8000/"><h4>Inicio</h4></a>
                
                 <div class="collapse navbar-collapse" id="navbarResponsive"> 
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href={% url 'ver_chefs' %}>Ver Chefs</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href={% url 'crear_chef' %}>Crear Chef</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href={% url 'ver_chefs' %}><h4>Ver Chefs</h4></a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href={% url 'crear_chef' %}><h4>Crear Chef</h4></a></li>
                        
                     </ul>
                 </div>
@@ -40,7 +41,7 @@
                         <div>
                             <div>
                                 <p>
-                                    <img class="masthead-avatar mb-5" src="static/assets/img/logo_master_chef_chico_-50.jpg" alt="..." /></p>
+                                    <img classname='pepito' class="masthead-avatar mb-5" src="static/assets/img/logo_master_chef_chico_-50.jpg" alt="..." /></p>
                                     <div>
 
                             </div>    
