--- a/app1/templates/app1/base.html
+++ b/app1/templates/app1/base.html
@@ -24,8 +24,9 @@
                 <a class="navbar-brand" href="http://127.0.0.1:8000/">Inicio</a>
                     <div class="collapse navbar-collapse" id="navbarResponsive">
                         <ul class="navbar-nav ms-auto">
-                            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href= {% url 'ver_chefs'%}> Ver Chefs</a></li>
-                            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href= {% url 'crear_chef'%}> Crear Chefs</a></li>
+                            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href= {% url 'ver_chefs' %}> Ver Chefs</a></li>
+                            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href= {% url 'crear_chef' %}> Crear Chefs</a></li>
+                            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href= {% url 'login' %}> Iniciar Sesion</a></li>
                         </ul>
                     </div>
             </div>
