--- a/accounts/templates/accounts/registrar.html
+++ b/accounts/templates/accounts/registrar.html
@@ -1,2 +1,20 @@
 {% extends 'app1/base.html' %}
 
+{% block title_pagina %}
+<title>Registrarse</title>
+{% endblock title_pagina %}
+
+
+{% block mi_contenido_crear %}
+<p>
+<p>
+<form action={% url 'registrar' %} method="POST">
+    {% csrf_token %}
+    <table>
+        {{formulario}}
+    </table>
+    <button>Registrarse</button>
+</form>
+</p>
+</p>
+{% endblock mi_contenido_crear %}
