--- a/app1/templates/app1/base.html
+++ b/app1/templates/app1/base.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         {% load static %}
+        
         <meta charset="utf-6" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
@@ -26,7 +27,13 @@
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href= {% url 'ver_chefs' %}> Ver Chefs</a></li>
                             <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href= {% url 'crear_chef' %}> Crear Chefs</a></li>
+                            {% if request.user.is_authenticated  %}
+                            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href= {%url 'perfil' %} > {{ request.user.username }}</a></li>                             
+                            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href= {% url 'logout' %}> Cerrar Sesion</a></li>                            
+                            {% else %}
                             <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href= {% url 'login' %}> Iniciar Sesion</a></li>
+                            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href= {% url 'registrar' %}> Registrarse</a></li>
+                            {% endif %}
                         </ul>
                     </div>
             </div>
