--- a/app1/templates/app1/index.html
+++ b/app1/templates/app1/index.html
@@ -22,12 +22,19 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="http://127.0.0.1:8000/"><h4>Inicio</h4></a>
+                <a class="navbar-brand" href="http://127.0.0.1:8000/">   <h4>Inicio</h4></a>
                
                 <div class="collapse navbar-collapse" id="navbarResponsive"> 
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href={% url 'ver_chefs' %}><h4>Ver Chefs</h4></a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href={% url 'crear_chef' %}><h4>Crear Chef</h4></a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href={% url 'ver_chefs' %}><h5>Ver Chefs</h5></a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href={% url 'crear_chef' %}><h5>Crear Chef</h5></a></li>
+                         {% if request.user.is_authenticated  %}
+                            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href= {%url 'perfil' %} > {{ request.user.username }}</a></li>                             
+                            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href= {% url 'logout' %}> <h5>Cerrar Sesion</h5></a></li>                            
+                            {% else %}
+                            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href= {% url 'login' %}> <h5>Iniciar Sesion</h5></a></li>
+                            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href= {% url 'registrar' %}> <h5>Registrarse</h5></a></li>
+                            {% endif %}
                        
                     </ul>
                 </div>
