--- a/app1/templates/app1/base.html
+++ b/app1/templates/app1/base.html
@@ -79,6 +79,10 @@
 
         {% endblock ver_chefs %}
         </div>
+        <div  class="container">
+        {% block mi_contenido_perfil %}
+        {% endblock mi_contenido_perfil %}
+        </div>
         <p>
             
             <!-- Footer-->
@@ -96,7 +100,8 @@
                         
                     </p>
                 </div>
-        </p>          
-        </footer>
+        
+            </footer>             
+        </p>    
     </body>
 </html>        
