--- a/app1/templates/app1/index.html
+++ b/app1/templates/app1/index.html
@@ -114,14 +114,15 @@
         <!-- Footer-->
         <footer class="footer text-center">
                                <!-- Footer About Text-->
-                    <div class="col-lg-4">
-                        <h4 class="text-uppercase mb-4">Acerca de Nosotros</h4>
+                    <p><div class="col-lg-4">
+                        <h5 class="text-uppercase mb-4">Acerca de Nosotros</h5>
+                    </p>    
                         <p class="lead mb-0">
                             Contino Emiliano
                             <a href="http://127.0.0.1:8000/">
-                               <p>Inicio</a></p> 
+                               <p>Inicio</a>
                             
-                        </p>
+                        <p></p>
                     </div>
                 </div>
             </div>
