--- a/accounts/templates/accounts/registrar.html
+++ b/accounts/templates/accounts/registrar.html
@@ -1,5 +1,7 @@
 {% extends 'app1/base.html' %}
 
+{% load static %}
+
 {% block title_pagina %}
 <title>Registrarse</title>
 {% endblock title_pagina %}
