--- a/app1/templates/app1/index.html
+++ b/app1/templates/app1/index.html
@@ -29,13 +29,14 @@
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href={% url 'ver_chefs' %}><h5>Ver Chefs</h5></a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href={% url 'crear_chef' %}><h5>Crear Chef</h5></a></li>
                          {% if request.user.is_authenticated  %}
-                            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href= {%url 'perfil' %} > {{ request.user.username }}</a></li>                             
+                            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href= {% url 'perfil' %} > {{ request.user.username }}</a></li>                             
                             <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href= {% url 'logout' %}> <h5>Cerrar Sesion</h5></a></li>                            
                             {% else %}
                             <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href= {% url 'login' %}> <h5>Iniciar Sesion</h5></a></li>
                             <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href= {% url 'registrar' %}> <h5>Registrarse</h5></a></li>
                             {% endif %}
-                       
+                                              
+                            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href={% url 'about' %}>Acerca de Nosotros</a></li>
                     </ul>
                 </div>
             </div>
@@ -48,7 +49,7 @@
                         <div>
                             <div>
                                 <p> <br></br><br></br>
-                                    <img classname='pepito' class="masthead-avatar mb-5" src="static/assets/img/logo_master_chef_chico_-50.jpg" alt="..." /></p>
+                                    <img classname='.masthead .masthead-avatar' class="masthead-avatar mb-5" src="static/assets/img/logo_master_chef_chico_-50.jpg" alt="..." /></p>
                                     <div>
 
                             </div>    
@@ -115,7 +116,7 @@
         <footer class="footer text-center">
                                <!-- Footer About Text-->
                     <p><div class="col-lg-4">
-                        <h5 class="text-uppercase mb-4">Acerca de Nosotros</h5>
+                        <h10 class="text-uppercase mb-4">Integrantes</h10>
                     </p>    
                         <p class="lead mb-0">
                             Contino Emiliano
