--- a/app1/templates/app1/about.html
+++ b/app1/templates/app1/about.html
@@ -4,21 +4,21 @@
  Nosotros
 {%endblock title_pagina %}
 
-{% load static %}
-<p>
+<br>
 
+</br>
+<p>
+    {% load static %}
 </p>
 
 {%block mi_contenido_perfil%}
-
-BLOG CREADO PARA ...
             <section class="py-5 bg-dark" >
                 <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
                         <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0" src="{%static 'assets/img/coder3.jpg' %}" alt="..." /></div>
                         <div class="col-lg-6">
                             <h2 class="fw-bolder" style="color: white;">Proyecto Final</h2>
-                            <p class="lead fw-normal text-muted mb-0">Este proyecto se realizo para la entrega final del curso de Python desde Cero dictado por Coderhouse.
+                            <p class="lead fw-normal text-muted mb-0"> Hola!!! Soy Emiliano Contino y este proyecto se realizo para la entrega final del curso de Python desde Cero dictado por Cristian Biancotti de Coderhouse. Es el primer lenguaje que estudio y practico. Es muy interesate y a la vez encontre un desafio nuevo para seguir estudiandolo y practicandolo.
                                 </p>
                         </div>
                     </div>
