--- a/app1/templates/app1/crear_chef.html
+++ b/app1/templates/app1/crear_chef.html
@@ -11,6 +11,7 @@
 <form action={% url 'crear_chef' %} method="POST">
     {% csrf_token %}
     <table>
+        {{form.media}}
         {{form}}
     </table>
     <button>Crear</button>
