--- a/app1/templates/app1/editar_chef.html
+++ b/app1/templates/app1/editar_chef.html
@@ -9,6 +9,7 @@
 <form action={% url 'editar_chef' chef.id %} method="POST">
     {% csrf_token %}
     <table>
+        {{form.media}}
         {{form}}
     </table>
     <button>Editar</button>
