--- a/app1/templates/app1/base.html
+++ b/app1/templates/app1/base.html
@@ -20,19 +20,19 @@
     </head>
     <body id="page-top">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+        <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed" id="mainNav">
             <div class="container">
                 <a class="navbar-brand" href="http://127.0.0.1:8000/">Inicio</a>
                     <div class="collapse navbar-collapse" id="navbarResponsive">
                         <ul class="navbar-nav ms-auto">
-                            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href= {% url 'ver_chefs' %}> Ver Chefs</a></li>
-                            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href= {% url 'crear_chef' %}> Crear Chefs</a></li>
+                            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href= {% url 'ver_chefs' %}> <h6> Ver Chefs</h6></a></li>
+                            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href= {% url 'crear_chef' %}><h6> Crear Chefs</h6></a></li>
                             {% if request.user.is_authenticated  %}
-                            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href= {%url 'perfil' %} > {{ request.user.username }}</a></li>                             
-                            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href= {% url 'logout' %}> Cerrar Sesion</a></li>                            
+                            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href= {%url 'perfil' %} ><h6>{{ request.user.username }}</h6></a></li>                             
+                            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href= {% url 'logout' %}><h6> Cerrar Sesion</h6></a></li>                            
                             {% else %}
-                            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href= {% url 'login' %}> Iniciar Sesion</a></li>
-                            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href= {% url 'registrar' %}> Registrarse</a></li>
+                            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href= {% url 'login' %}><h6> Iniciar Sesion</h6></a></li>
+                            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href= {% url 'registrar' %}><h6> Registrarse</h6></a></li>
                             {% endif %}
                         </ul>
                     </div>
@@ -45,7 +45,7 @@
                     <div>
                         <div>
                             <p>
-                                <img class="masthead-avatar mb-5" src="static/assets/img/logo_master_chef_chico_-50.jpg" alt="..." /></p>
+                                {% comment %} <img class="masthead-avatar mb-5" src="static/assets/img/logo_master_chef_chico_-50.jpg" alt="..." /></p> {% endcomment %}
                                 <div>
 
                         </div>    
@@ -55,7 +55,7 @@
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">CONTANOS TU PLATILLO FAVORITO</h1>
                 <!-- Icon Divider-->
-                <div class="divider-custom divider-light">
+                <div class="divider-custom ">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon"><i class="fas fa-star "></i>
                         <i class="fas fa-star "></i>
@@ -91,7 +91,7 @@
                 <div class="col-lg-50">
                     <p>
                     </p>
-                    <h6 class="text-uppercase mb-2">Acerca de Nosotros</h6>
+                    <h6 class="text-uppercase mb-2">Acerca de Mi</h6>
                     
                     <p class="lead mb-0">
                         Contino Emiliano
