--- a/accounts/templates/accounts/perfil.html
+++ b/accounts/templates/accounts/perfil.html
@@ -26,7 +26,7 @@
     {% if request.user.extensionusuario.link %}
     <li><strong>Link Pagina:</strong> </li><a href={{request.user.extensionusuario.link}}> {{request.user.extensionusuario.link}}</a>
     {% else %}
-    <li><strong>Link Pagina:</strong></li> 
+    <li><strong>Link Pagina:</strong></li> No tengo.
     {% endif %}
 <p>
     
