--- a/app1/templates/app1/base.html
+++ b/app1/templates/app1/base.html
@@ -34,6 +34,7 @@
                             <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href= {% url 'login' %}><h6> Iniciar Sesion</h6></a></li>
                             <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href= {% url 'registrar' %}><h6> Registrarse</h6></a></li>
                             {% endif %}
+                            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href={% url 'about' %}><h6>Acerca de Mi</h6></a></li>
                         </ul>
                     </div>
             </div>
